# EdgeX

./: .gitignore  CMakeLists.txt  README.md
sdk/kendryte-standalone-sdk/lib/bsp/: .#locks.c  locks.c  printf.c  syscalls.c
sdk/kendryte-standalone-sdk/lib/bsp/include/: printf.h
sdk/kendryte-standalone-sdk/lib/drivers/: i2c.c  spi.c  uart.c
sdk/kendryte-standalone-sdk/lib/nncase/: nncase.cpp
sdk/kendryte-standalone-sdk/lib/nncase/runtime/neutral/: neutral_ops.cpp
src/: CMakeLists.txt  Commissioning.h  config.h  main.c
src/drivers/: CMakeLists.txt
src/drivers/adc/: CMakeLists.txt  adc_mcp3021.c  adc_mcp3021.h
src/drivers/camera/: CMakeLists.txt  ov2640.c  ov2640.h  ov2640_regs.h
src/drivers/flash/: CMakeLists.txt  w25qxx.c  w25qxx.h
src/drivers/ioexp/: CMakeLists.txt  ioexp.c  ioexp.h
src/drivers/lcd/: CMakeLists.txt  font.c  font.h  lcd.c  nt35310.h
src/drivers/sd/: CMakeLists.txt  sdcard.c
src/drivers/security/: atsha204a.h
src/mac/: CMakeLists.txt  LoRaMac.c  LoRaMac.h  LoRaMacCrypto.c  systime.c  utilities.h
src/mac/region/: RegionEU868.c
src/mac/soft-se/: soft-se.c
src/radio/: CMakeLists.txt
src/radio/board/: board.h  gpio-board.h  spi-board.h  timer-board.c  timer-board.h  timer.c
src/radio/sx126x/: board.h  radio.c  sx126x-board.c  sx126x-board.h  sx126x.c  sx126x.h
src/tasks/: CMakeLists.txt
src/tasks/ai/: CMakeLists.txt  ai_task.c  ai_task.h  region_layer.c  spot_analysis.h
src/tasks/apps/: CMakeLists.txt  common.c  common.h
src/tasks/apps/parking/: CMakeLists.txt  display_helpers.h  parking_app.c  parking_commands.c
src/tasks/apps/person/: CMakeLists.txt  person_app.c  region_layer.c
src/tasks/lora/: CMakeLists.txt  LmHandlerMsgDisplay.c  LmHandlerMsgDisplay.h  NvmCtxMgmt.c  lora_commands.c  lora_task.c  lora_task.h
src/utility/: CMakeLists.txt  console.c  console.h  dbprintf.c  dbprintf.h  mxtimer.c  mxtimer.h  pconfig.c  pconfig.h
